// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UniParcXRefsColumnConfiguration component should render column "accession": accession 1`] = `
<DocumentFragment>
  <span>
    <a
      href="/uniprotkb/P07612/entry"
    >
      P07612
    </a>
  </span>
</DocumentFragment>
`;

exports[`UniParcXRefsColumnConfiguration component should render column "active": active 1`] = `
<DocumentFragment>
  <span>
    Yes
  </span>
</DocumentFragment>
`;

exports[`UniParcXRefsColumnConfiguration component should render column "database": database 1`] = `
<DocumentFragment>
  <span>
    <span
      class="entry-title__status icon--reviewed"
      title="This marks a reviewed UniProtKB entry"
    >
      <test-file-stub />
    </span>
    UniProtKB reviewed
  </span>
</DocumentFragment>
`;

exports[`UniParcXRefsColumnConfiguration component should render column "first_seen": first_seen 1`] = `
<DocumentFragment>
  <time
    datetime="2007-01-23T00:00:00.000Z"
  >
    2007-01-23
  </time>
</DocumentFragment>
`;

exports[`UniParcXRefsColumnConfiguration component should render column "gene": gene 1`] = `
<DocumentFragment>
  <span>
    OPG099
  </span>
</DocumentFragment>
`;

exports[`UniParcXRefsColumnConfiguration component should render column "last_seen": last_seen 1`] = `
<DocumentFragment>
  <time
    datetime="2024-05-29T00:00:00.000Z"
  >
    2024-05-29
  </time>
</DocumentFragment>
`;

exports[`UniParcXRefsColumnConfiguration component should render column "ncbiGi": ncbiGi 1`] = `
<DocumentFragment>
  <a
    class="external-link"
    href="https://www.ncbi.nlm.nih.gov/protein/138624"
    rel="noopener"
    target="_blank"
  >
    RefSeq: 138624
    <test-file-stub
      data-testid="external-link-icon"
      width="12.5"
    />
  </a>
</DocumentFragment>
`;

exports[`UniParcXRefsColumnConfiguration component should render column "organism": organism 1`] = `
<DocumentFragment>
  <a
    href="/taxonomy/10254"
    title="Vaccinia virus (strain Western Reserve) (VACV), taxon ID 10254"
    translate="no"
  >
    Vaccinia virus (strain Western Reserve) (VACV)
  </a>
</DocumentFragment>
`;

exports[`UniParcXRefsColumnConfiguration component should render column "organism_id": organism_id 1`] = `
<DocumentFragment>
  <a
    href="/taxonomy/10254"
    title="Vaccinia virus (strain Western Reserve) (VACV), taxon ID 10254"
    translate="no"
  >
    10254
  </a>
</DocumentFragment>
`;

exports[`UniParcXRefsColumnConfiguration component should render column "protein": protein 1`] = `
<DocumentFragment>
  <span>
    Entry-fusion complex associated protein OPG095
  </span>
</DocumentFragment>
`;

exports[`UniParcXRefsColumnConfiguration component should render column "proteome": proteome 1`] = `<DocumentFragment />`;

exports[`UniParcXRefsColumnConfiguration component should render column "timeline": timeline 1`] = `
<DocumentFragment>
  <div />
</DocumentFragment>
`;

exports[`UniParcXRefsColumnConfiguration component should render column "version": version 1`] = `
<DocumentFragment>
  <span>
    3
  </span>
</DocumentFragment>
`;

exports[`UniParcXRefsColumnConfiguration component should render column "version_uniparc": version_uniparc 1`] = `
<DocumentFragment>
  <span>
    3
  </span>
</DocumentFragment>
`;
